# gar

./: .gitignore  CMakeLists.txt  README.md
include/ccli/: app.h
micro-testing-lol/ccli-testing/: test.c
micro-testing-lol/cmake-testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hi.c
micro-testing-lol/cmd-app-test/: delete-me  dyn-array-main.c  old-main.c  test
micro-testing-lol/cmd-app-test/test.dSYM/Contents/Resources/DWARF/: test
micro-testing-lol/components/: app.c  app.h  array.h  ccli.h  command.h  component-array.h  input.h  main.c  makefile
micro-testing-lol/macro-expansion/: expand.c  outputfile  struct-macro.c
micro-testing-lol/struct-testing/: main.c  struct.c  struct.h  test
src/: CMakeLists.txt  app.c  vector.h
tests/: tinytest.h
